Fix navbar scaling for small screen

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <p class="alert"><%= alert %></p>
     <%= render 'layouts/navbar' %>
     
-    <main class="pt-17">
+    <main class="pt-65 md:pt-17">
       <%= yield %>
     </main>
 
