--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="flex justify-center items-center max-w-8xl mx-auto p-4 my-8">
-  <div class="bg-gray-400 rounded-2xl shadow-xl overflow-hidden">
+  <div class="bg-[--color-test] rounded-2xl shadow-xl overflow-hidden">
     <h1> Title</h1>
     
   </div>
